# golias-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_8md.html  annotated.html  assimp__io_8cpp.html  assimp__io_8h.html  assimp__io_8h_source.html  base__struct_8cpp.html  base__struct_8h.html  base__struct_8h_source.html  classCamera2D-members.html  classCamera2D.html  classEngine-members.html  classEngine.html  classFileAccess-members.html  classFileAccess.html  classFont-members.html  classFont.html  classLogger-members.html  classLogger.html  classOpenglMesh-members.html  classOpenglMesh.html  classOpenglRenderer-members.html  classOpenglRenderer.html  classOpenglShader-members.html  classOpenglShader.html  classOpenglTexture-members.html  classOpenglTexture.html  classRenderer-members.html  classRenderer.html  classSDLIOStream-members.html  classSDLIOStream.html  (+230 more)
assets/: default.glsl.frag  default.glsl.vert
client/: main.cpp
docs/: Doxyfile
engine/: CMakeLists.txt
engine/private/: nuklear_impl.cpp  stdafx.cpp
engine/private/core/: ember_core.cpp  ember_utils.cpp  engine.cpp  engine_config.cpp  engine_structs.cpp  file_system.cpp  project_config.cpp  system_info.cpp  text_parser.cpp  time_manager.cpp
engine/private/core/api/: engine_api.cpp
engine/private/core/audio/: ember_audio.cpp
engine/private/core/binding/: lua.cpp
engine/private/core/canvas/: Button.cpp  ProgressBar.cpp  Text.cpp  button.cpp  progress_bar.cpp  text.cpp
engine/private/core/component/: Camera.cpp  Transform.cpp  camera.cpp  circle.cpp  collision_shape.cpp  component.cpp  components.cpp  label.cpp  node.cpp  phys_obj.cpp  polygon.cpp  rigidbody_node.cpp  sprite_node.cpp  transform.cpp  transform_node.cpp
engine/private/core/component/logic/: system_helper.cpp  system_logic.cpp
engine/private/core/component/ui/: button_node.cpp  control_node.cpp  line_edit.cpp  panel_node.cpp
engine/private/core/http/: http_client.cpp
engine/private/core/input/: input_manager.cpp
engine/private/core/io/: assimp_io.cpp  file_system.cpp  ma_io.cpp
engine/private/core/network/: enet_client.cpp  enet_server.cpp
engine/private/core/platform/ios/: system_info_ios.mm
engine/private/core/platform/linux/: system_info_linux.c
engine/private/core/platform/macos/: system_info_macos.mm
engine/private/core/platform/web/: system_info_web.c
engine/private/core/platform/windows/: system_info_win.c
engine/private/core/renderer/: base_struct.cpp  element_buffer.cpp  ember_core.cpp  ember_gl.cpp  mesh.cpp  renderer.cpp  sdl_renderer.cpp  shader.cpp  vertex_buffer.cpp
engine/private/core/renderer/metal/: ember_mtl.mm
engine/private/core/renderer/opengl/: ember_gl.cpp  ogl_renderer.cpp  ogl_struct.cpp  shader_gl.cpp
engine/private/core/renderer/sdl/: sdl_renderer.cpp  sdl_struct.cpp
engine/private/core/system/: logging.cpp  timer.cpp
engine/private/core/systems/: audio_manager.cpp  collision_sys.cpp  editor_manager.cpp  input_manager.cpp  logging_sys.cpp  physics_sys.cpp  scene_manager.cpp  thread_pool.cpp  time_manager.cpp
engine/private/core/utility/: obj_loader.cpp  project_config.cpp
engine/private/helpers/: logging.cpp
engine/private/opengl/: glad.c
engine/public/: definitions.h  imports.h  nuklear_include.h  nuklear_sdl3_gl3.h  nuklear_sdl3_renderer.h  stdafx.h
engine/public/core/: ember_core.h  ember_utils.h  engine.h  engine_config.h  engine_structs.h  file_system.h  project_config.h  system_info.h  text_parser.h  time_manager.h
engine/public/core/api/: engine_api.h
engine/public/core/audio/: ember_audio.h
engine/public/core/binding/: lua.h
engine/public/core/canvas/: Button.h  ProgressBar.h  Text.h  button.h  progress_bar.h  text.h
engine/public/core/component/: Camera.h  Transform.h  camera.h  circle.h  collision_shape.h  collision_shapes.h  component.h  components.h  label.h  node.h  phys_obj.h  polygon.h  rigidbody_node.h  sprite_node.h  transform.h  transform_node.h
engine/public/core/component/logic/: system_helper.h  system_logic.h
engine/public/core/component/ui/: button_node.h  control_node.h  line_edit.h  panel_node.h
engine/public/core/http/: http_client.h
engine/public/core/input/: input_manager.h
engine/public/core/io/: assimp_io.h  file_system.h  ma_io.h  reflection.h
engine/public/core/network/: enet_client.h  enet_server.h
engine/public/core/renderer/: base_struct.h  element_buffer.h  ember_core.h  ember_gl.h  mesh.h  renderer.h  sdl_renderer.h  shader.h  vertex_buffer.h
engine/public/core/renderer/metal/: ember_mtl.h
engine/public/core/renderer/opengl/: ember_gl.h  ogl_renderer.h  ogl_struct.h  shader_gl.h
engine/public/core/renderer/sdl/: sdl_renderer.h  sdl_struct.h
engine/public/core/system/: logging.h  timer.h
engine/public/core/systems/: audio_manager.h  collision_sys.h  editor_manager.h  engine_sys.h  input_manager.h  logging_sys.h  physics_sys.h  scene_manager.h  thread_pool.h  time_manager.h
engine/public/core/utility/: obj_loader.h  project_config.h
engine/public/helpers/: logging.h
examples/: basic_draw.cpp
game/: main.cpp
helpers/: enum_parser.py
res/: controller_db  player_data.json  project.xml
runtime/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+118 more)
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  example_minimal_2d.cpp  example_minimal_3d.cpp  example_orbit_cubes_3d.cpp  test_basic_draw.cpp  test_basic_loop.cpp  test_engine.cpp  test_engine_config.cpp  test_fbo_draw.cpp  test_fileaccess_api.cpp  test_hello.cpp  test_http_requests_api.cpp  test_lua_binding.cpp  test_mini_platformer.cpp  test_minimal_server.cpp  test_node_basics.cpp  test_scene_multiplayer_example.cpp
tests/res/scripts/: constants.lua  test.lua
(+38 files in other folders)
